--- a/DashBoardPF/Web.config
+++ b/DashBoardPF/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DashBoardPF-20161024095233.mdf;Initial Catalog=aspnet-DashBoardPF-20161024095233;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PolloCentralEntities" connectionString="metadata=res://*/Models.PolloCentral.csdl|res://*/Models.PolloCentral.ssdl|res://*/Models.PolloCentral.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PolloCentral;initial catalog=PolloCentral;persist security info=True;user id=PolloFeliz;password=PFJoseRuben82;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PolloCentralEntities1" connectionString="metadata=res://*/Models.PolloCentral.csdl|res://*/Models.PolloCentral.ssdl|res://*/Models.PolloCentral.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pfdelcentro.mine.nu;initial catalog=PolloCentral;persist security info=True;user id=PolloFeliz;password=PFJoseRuben82;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
