--- a/DashBoardPF/DashBoardPF.csproj
+++ b/DashBoardPF/DashBoardPF.csproj
@@ -236,6 +236,7 @@
     </Compile>
     <Compile Include="Models\VentasChartModel.cs" />
     <Compile Include="Models\VentasRestaurant.cs" />
+    <Compile Include="Models\VentasSucAnioVsAnioAnterior.cs" />
     <Compile Include="Models\VentaSucMesVsAnioAnterior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -319,6 +320,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\ReportePorSucursal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
