--- a/DashBoardPF/DashBoardPF.csproj
+++ b/DashBoardPF/DashBoardPF.csproj
@@ -272,6 +272,8 @@
     <Content Include="Models\PolloCentral.edmx.diagram">
       <DependentUpon>PolloCentral.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\DashBoardPolloFeliz - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\DashBoardPolloFeliz - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
